<resources>
    <string name="app_name">Marvel HQs</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="or">OU</string>
    <string name="register">Registro</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <string name="nome">Nome</string>

    <string name="erroVazio">Campo %1$s não pode estar vazio</string>
    <string name="campoInvalido">Campo %1$s Inválido!</string>
    <string name="backbutton">Botão de Voltar</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>

</resources>