<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="480sp"
        android:layout_margin="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20sp"
        android:elevation="5sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="35sp"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tilEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/email"
            app:helperText="Coloque o seu Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin"
            app:layout_constraintBottom_toTopOf="@+id/tilSenha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/senha"
            app:helperText="Coloque sua Senha"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:layout_constraintBottom_toTopOf="@id/btLoginEntrar"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textWebPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btLoginEntrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@id/tilSenha"
            android:layout_marginTop="32sp"
            android:background="@drawable/custom_button"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btLoginRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btLoginEntrar"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            android:layout_marginTop="20sp"
            android:background="@drawable/custom_button"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>